<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/forum_common_car_iv"
            android:layout_width="@dimen/sixty"
            android:layout_height="@dimen/sixty"
            android:layout_margin="@dimen/margin_ten"
            android:src="@mipmap/caricon"/>

        <TextView
            android:id="@+id/forum_common_car_forum_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forum_common_car"
            android:layout_toRightOf="@id/forum_common_car_iv"
            android:textSize="@dimen/text_size_twenty"
            android:layout_marginTop="@dimen/margin_ten"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forum_common_car_content"
            android:layout_toRightOf="@id/forum_common_car_iv"
            android:layout_below="@id/forum_common_car_forum_tv"
            android:layout_marginBottom="@dimen/margin_ten"
            android:textColor="@color/colorGray"
            android:layout_marginTop="@dimen/margin_fifteen"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/forum_common_area_iv"
            android:layout_width="@dimen/sixty"
            android:layout_height="@dimen/sixty"
            android:layout_margin="@dimen/margin_ten"
            android:src="@mipmap/area"/>

        <TextView
            android:id="@+id/forum_common_area_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forum_forum"
            android:layout_toRightOf="@id/forum_common_area_iv"
            android:textSize="@dimen/text_size_twenty"
            android:layout_marginTop="@dimen/margin_ten"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forum_forum_content"
            android:layout_toRightOf="@id/forum_common_area_iv"
            android:layout_below="@id/forum_common_area_tv"
            android:layout_marginBottom="@dimen/margin_ten"
            android:textColor="@color/colorGray"
            android:layout_marginTop="@dimen/margin_fifteen"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/forum_common_them_iv"
            android:layout_width="@dimen/sixty"
            android:layout_height="@dimen/sixty"
            android:layout_margin="@dimen/margin_ten"
            android:src="@mipmap/flag"/>

        <TextView
            android:id="@+id/forum_common_them_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forum_them"
            android:layout_toRightOf="@id/forum_common_them_iv"
            android:textSize="@dimen/text_size_twenty"
            android:layout_marginTop="@dimen/margin_ten"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forum_them_content"
            android:layout_toRightOf="@id/forum_common_them_iv"
            android:layout_below="@id/forum_common_them_tv"
            android:layout_marginBottom="@dimen/margin_ten"
            android:textColor="@color/colorGray"
            android:layout_marginTop="@dimen/margin_fifteen"/>
    </RelativeLayout>

</LinearLayout>
