<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/item_normal_padding"
            android:text="@string/person_title"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/person_title_text_size" />

        <ImageView
            android:layout_width="@dimen/person_image_width"
            android:layout_height="@dimen/person_image_height"
            android:src="@mipmap/sun" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/person_login_rl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/oze">


                <ImageView
                    android:id="@+id/user_icon"
                    android:layout_width="@dimen/sixty"
                    android:layout_height="@dimen/sixty"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/nologin"/>

                <TextView
                    android:id="@+id/person_login_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/user_icon"
                    android:layout_margin="@dimen/margin_ten"
                    android:text="@string/nologin"/>

            </RelativeLayout>
            <!--**************************************************************-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/eighty">


                <LinearLayout
                    android:id="@+id/user_name_login_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_image_margin"
                    android:orientation="vertical"
                    android:padding="@dimen/item_normal_padding">

                    <ImageView
                        android:id="@+id/user_name_login_iv"
                        android:layout_width="@dimen/person_image_width"
                        android:layout_height="@dimen/person_image_height"
                        android:layout_marginLeft="@dimen/activity_image_margin"
                        android:src="@mipmap/login1" />

                    <TextView
                        android:id="@+id/user_name_login_tv"
                        android:layout_width="@dimen/text_width"
                        android:layout_height="wrap_content"
                        android:text="@string/user_login_text" />
                </LinearLayout>

                <View
                    android:id="@+id/line_center"
                    android:layout_width="@dimen/person_view_width"
                    android:layout_height="@dimen/person_view_height"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@color/colorGray" />

                <LinearLayout
                    android:id="@+id/qq_login_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_image_margin"
                    android:orientation="vertical"
                    android:padding="@dimen/item_normal_padding">

                    <ImageView
                        android:id="@+id/qq_login_iv"
                        android:layout_width="@dimen/person_image_width"
                        android:layout_height="@dimen/person_image_height"
                        android:layout_marginLeft="@dimen/activity_image_margin"
                        android:src="@mipmap/qqlogin" />

                    <TextView
                        android:id="@+id/qq_login_tv"
                        android:layout_width="@dimen/text_width"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/item_normal_margin"
                        android:text="@string/qq_login_text" />
                </LinearLayout>

                <View
                    android:layout_width="@dimen/person_view_width"
                    android:layout_height="@dimen/person_view_height"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@color/colorGray" />

                <LinearLayout
                    android:id="@+id/webo_login_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_image_margin"
                    android:orientation="vertical"
                    android:padding="@dimen/item_normal_padding">

                    <ImageView
                        android:layout_width="@dimen/person_image_width"
                        android:layout_height="@dimen/person_image_height"
                        android:layout_marginLeft="@dimen/item_normal_padding"
                        android:src="@mipmap/webo1" />

                    <TextView
                        android:layout_width="@dimen/text_width"
                        android:layout_height="wrap_content"
                        android:text="@string/webo_login_text" />

                </LinearLayout>

                <View
                    android:layout_width="@dimen/person_view_width"
                    android:layout_height="@dimen/person_view_height"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@color/colorGray" />


                <LinearLayout
                    android:id="@+id/we_chat_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_image_margin"
                    android:orientation="vertical"
                    android:padding="@dimen/item_normal_padding">

                    <ImageView
                        android:id="@+id/we_chat_iv"
                        android:layout_width="@dimen/person_image_width"
                        android:layout_height="@dimen/person_image_height"
                        android:layout_marginLeft="@dimen/item_normal_padding"
                        android:src="@mipmap/wechat" />

                    <TextView
                        android:id="@+id/we_chat_tv"
                        android:layout_width="@dimen/text_width"
                        android:layout_height="wrap_content"
                        android:text="@string/wechat_login_text" />
                </LinearLayout>
            </LinearLayout>

            <include layout="@layout/view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fifty">

                    <ImageView
                        android:id="@+id/person_coupon"
                        android:layout_width="@dimen/height_twenty_five"
                        android:layout_height="@dimen/thirty"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/margin_ten"
                        android:src="@mipmap/coupon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/margin_fifteen"
                        android:layout_toRightOf="@id/person_coupon"
                        android:text="@string/coupon" />

                    <ImageView
                        android:layout_width="@dimen/twenty"
                        android:layout_height="@dimen/twenty"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/arrow" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/fragment_person_collect_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fifty">

                    <ImageView
                        android:id="@+id/person_collect"
                        android:layout_width="@dimen/height_twenty_five"
                        android:layout_height="@dimen/thirty"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/margin_ten"
                        android:src="@mipmap/collect" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/margin_fifteen"
                        android:layout_toRightOf="@id/person_collect"
                        android:text="@string/collect" />

                    <ImageView
                        android:layout_width="@dimen/twenty"
                        android:layout_height="@dimen/twenty"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/arrow" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fifty">

                    <ImageView
                        android:id="@+id/person_history"
                        android:layout_width="@dimen/height_twenty_five"
                        android:layout_height="@dimen/thirty"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/margin_ten"
                        android:src="@mipmap/history" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/margin_fifteen"
                        android:layout_toRightOf="@id/person_history"
                        android:text="@string/history" />

                    <ImageView
                        android:layout_width="@dimen/twenty"
                        android:layout_height="@dimen/twenty"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/arrow" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fifty">

                    <ImageView
                        android:id="@+id/person_draft"
                        android:layout_width="@dimen/height_twenty_five"
                        android:layout_height="@dimen/thirty"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/margin_ten"
                        android:src="@mipmap/draft" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/margin_fifteen"
                        android:layout_toRightOf="@id/person_draft"
                        android:text="@string/draft" />

                    <ImageView
                        android:layout_width="@dimen/twenty"
                        android:layout_height="@dimen/twenty"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/arrow" />
                </RelativeLayout>

            </LinearLayout>

            <include layout="@layout/view" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty">

                <ImageView
                    android:id="@+id/person_set"
                    android:layout_width="@dimen/height_twenty_five"
                    android:layout_height="@dimen/thirty"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin_ten"
                    android:src="@mipmap/set" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin_fifteen"
                    android:layout_toRightOf="@id/person_set"
                    android:text="@string/set" />

                <ImageView
                    android:layout_width="@dimen/twenty"
                    android:layout_height="@dimen/twenty"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/arrow" />
            </RelativeLayout>

            <include layout="@layout/view" />
        </LinearLayout>
</LinearLayout>
